@@ -1,4 +1,5 @@
 Development
+    Set the use-symbolic property on the GtkVolumeButton in GTK3
     Fix button sensitivity based on state
     More symbolic icon fixes
     Use the GTK3 symbolic icons when running in GTK3 mode
